--- a/style.css
+++ b/style.css
@@ -27,3 +27,16 @@ p {
     font-size: 25px;
     text-align: center;
 }
+
+/* & This will style the Footer section of the webpage */
+footer {
+    width: 100%;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+}
+
+footer > p {
+    color: #ff9eb5;
+    font-size: 18px;
+}
